--- a/Resources/Private/Templates/Booking/Bookings.html
+++ b/Resources/Private/Templates/Booking/Bookings.html
@@ -3,10 +3,9 @@
 
 <f:section name="main">
 
-    <h1>Bestehende Buchungen</h1>
     <f:flashMessages renderMode="div"/>
 
-    <table class="tx_t3booking">
+    <table class="tx-t3booking">
         <tr>
             <th colspan="2">
                 Zeit
