--- a/Resources/Private/Templates/Booking/Edit.html
+++ b/Resources/Private/Templates/Booking/Edit.html
@@ -18,17 +18,45 @@
 
     </script>
 
-    <h1>Anfrage bearbeiten</h1>
-
     <f:flashMessages renderMode="div"/>
+
+    <table class="tx-t3booking">
+        <tr>
+            <th scope="row">
+                <f:translate key="tx_t3booking_domain_model_user.company"/>
+            </th>
+            <td>
+                {booking.user.company}
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                <f:translate key="tx_t3booking_domain_model_user.name"/>
+            </th>
+            <td>
+                {booking.user.name}
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                <f:translate key="tx_t3booking_domain_model_user.telephone"/>
+            </th>
+            <td>
+                {booking.user.telephone}
+            </td>
+        </tr>
+
+    </table>
 
     <f:render partial="FormErrors" arguments="{object:Booking}"/>
 
     <f:form action="update" name="booking" object="{booking}">
         <f:render partial="Booking/FormFields" arguments="{booking:booking}"/>
-        <f:form.submit value="Speichern"/>
+        <f:form.submit value="{f:translate(key: 'tx_t3booking.save')}"/>
     </f:form>
-    <f:link.action action="requests">Zurück</f:link.action>
+    <f:link.action action="requests">{f:translate(key: 'tx_t3booking.back')}</f:link.action>
 
-    <f:link.action action="delete" arguments="{booking : booking}" class="button btn">stornieren</f:link.action>
+    <f:link.action action="delete" arguments="{booking : booking}" class="button btn">{f:translate(key:
+        'tx_t3booking.delete')}
+    </f:link.action>
 </f:section>
