--- a/Resources/Private/Templates/Booking/Bookings.html
+++ b/Resources/Private/Templates/Booking/Bookings.html
@@ -6,34 +6,60 @@
     <f:flashMessages renderMode="div"/>
 
     <table class="tx-t3booking">
+        <thead>
         <tr>
-            <th colspan="2">
-                Zeit
+            <th></th>
+            <th colspan="2" scope="col">
+                <f:translate key="tx_t3booking_domain_model_booking.time"/>
             </th>
-            <th>
+            <th scope="col">
+                <f:translate key="tx_t3booking_domain_model_user.company"/>
+            </th>
+            <th scope="col">
+                <f:translate key="tx_t3booking_domain_model_user.category"/>
+            </th>
+            <th scope="col">
                 <f:translate key="tx_t3booking_domain_model_booking.quantity"/>
             </th>
             <th></th>
+            <th></th>
         </tr>
-
+        </thead>
+        <tbody>
         <f:for each="{bookings}" as="booking">
             <tr>
-                <td>{booking.startAt ->
-                    f:format.date(format: 'd.m.')}
+                <td class="cal">
+                    <f:link.action action="show" arguments="{booking : booking}" class="btn">
+                        <f:image src="EXT:t3booking/Resources/Public/Icons/cal.png" alt="Show"/>
+                    </f:link.action>
                 </td>
-                <td>
+                <td class="date">{booking.startAt ->
+                    f:format.date(format: 'd.m.Y')}
+                </td>
+                <td class="time">
                     {booking.startAt ->
                     f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
                 </td>
-                <td>
+                <td class="company">{booking.user.company}</td>
+                <td class="category">{booking.user.name} Kl.</td>
+                <td class="quantity">
                     {booking.quantity}
+                    <f:translate key="tx_t3booking_domain_model_booking.unit"/>
                 </td>
-                <td>
-                    <f:link.action action="edit" arguments="{booking : booking}" class="btn">Bearbeiten</f:link.action>
+                <td class="icon">
+                    <f:link.action action="show" arguments="{booking : booking}" class="btn">
+                        <f:image src="EXT:t3booking/Resources/Public/Icons/show.png"
+                                 alt="{f:translate(key: 'tx_t3booking.show')}"/>
+                    </f:link.action>
+                </td>
+                <td class="icon">
+                    <f:link.action action="delete" arguments="{booking : booking}" class="btn">
+                        <f:image src="EXT:t3booking/Resources/Public/Icons/delete.png"
+                                 alt="{f:translate(key: 'tx_t3booking.delete')}"/>
+                    </f:link.action>
                 </td>
             </tr>
         </f:for>
+        </tbody>
     </table>
-
-    <f:link.action action="new">Neue Anfrage</f:link.action>
 </f:section>
