--- a/Resources/Private/Templates/Email/Update.html
+++ b/Resources/Private/Templates/Email/Update.html
@@ -1,2 +1,4 @@
 <p>Hallo {booking.user.name},</p>
-<p>wir haben Ihre Anfrage erhalten und werden Sie kontaktieren, sobald die Buchung bearbeitet ist.</p>
+<p>wir haben Ihre Buchung berabeitet.</p>
+<p>Status: {booking.status}</p>
+<p></p>
