--- a/Resources/Private/Templates/Booking/Edit.html
+++ b/Resources/Private/Templates/Booking/Edit.html
@@ -20,32 +20,34 @@
 
     <f:flashMessages renderMode="div"/>
 
-    <table class="tx-t3booking">
+    <table class="tx-t3booking-show">
         <tr>
             <th scope="row">
-                <f:translate key="tx_t3booking_domain_model_user.company"/>
+                <f:translate key="tx_t3booking_domain_model_user.company"/>:
             </th>
-            <td>
-                {booking.user.company}
+            <td class="company">
+                {booking.user.company} | {booking.classification.name}
             </td>
         </tr>
         <tr>
-            <th scope="row">
-                <f:translate key="tx_t3booking_domain_model_user.name"/>
-            </th>
-            <td>
-                {booking.user.name}
+            <th>Gebucht von:</th>
+            <td>{booking.user.name} | {booking.user.telephone} |
+                <f:link.email email="{booking.user.email}">{booking.user.email}</f:link.email>
             </td>
         </tr>
         <tr>
-            <th scope="row">
-                <f:translate key="tx_t3booking_domain_model_user.telephone"/>
-            </th>
+            <th>Gebucht am:</th>
             <td>
-                {booking.user.telephone}
+                <f:format.date format="d.m.Y">{booking.createdAt}</f:format.date>
+                um
+                <f:format.date format="H:i">{booking.createdAt}</f:format.date>
+                Uhr
             </td>
         </tr>
-
+        <tr>
+            <th>Bestätigt von:</th>
+            <td>{booking.confirmBy.name} um <f:format.date format="H:i">{booking.confirmAt}</f:format.date> Uhr</td>
+        </tr>
     </table>
 
     <f:render partial="FormErrors" arguments="{object:Booking}"/>
@@ -54,9 +56,6 @@
         <f:render partial="Booking/FormFields" arguments="{booking:booking}"/>
         <f:form.submit value="{f:translate(key: 'tx_t3booking.save')}"/>
     </f:form>
-    <f:link.action action="requests">{f:translate(key: 'tx_t3booking.back')}</f:link.action>
 
-    <f:link.action action="delete" arguments="{booking : booking}" class="button btn">{f:translate(key:
-        'tx_t3booking.delete')}
-    </f:link.action>
+
 </f:section>
