--- a/Resources/Private/Templates/Booking/List.html
+++ b/Resources/Private/Templates/Booking/List.html
@@ -1,43 +1,59 @@
+<f:layout name="Default"/>
 
-<f:layout name="Default" />
-
-This Template is responsible for creating a table of domain objects.
-
-If you modify this template, do not forget to change the overwrite settings
-in /Configuration/ExtensionBuilder/settings.yaml:
-  Resources:
-    Private:
-      Templates:
-        List.html: keep
-
-Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="main">
-<h1>Listing for Booking</h1>
 
-<f:flashMessages renderMode="div" />
+    <f:flashMessages renderMode="div"/>
 
-<table  class="tx_t3booking" >
-	<tr>
-		<th><f:translate key="tx_t3booking_domain_model_booking.start_at" /></th>
-		<th><f:translate key="tx_t3booking_domain_model_booking.status" /></th>
-		<th><f:translate key="tx_t3booking_domain_model_booking.end_at" /></th>
-		<th><f:translate key="tx_t3booking_domain_model_booking.quantity" /></th>
-		<th> </th>
-		<th> </th>
-	</tr>
+    <table class="tx-t3booking-list">
+        <thead>
+        <tr>
+            <th></th>
+            <th colspan="2" scope="col">
+                <f:translate key="tx_t3booking_domain_model_booking.time"/>
+            </th>
+            <th scope="col">
+                <f:translate key="tx_t3booking_domain_model_user.company"/>
+            </th>
+            <th scope="col">
+                <f:translate key="tx_t3booking_domain_model_user.classification"/>
+            </th>
+            <th scope="col">
+                <f:translate key="tx_t3booking_domain_model_booking.quantity"/>
+            </th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <f:for each="{bookings}" as="booking">
+            <tr>
+                <td class="cal">
+                    <f:link.action action="show" arguments="{booking : booking}" class="btn">
+                        <f:image src="EXT:t3booking/Resources/Public/Icons/cal.png" alt="Show"/>
+                    </f:link.action>
+                </td>
+                <td class="date">{booking.startAt ->
+                    f:format.date(format: 'd.m.Y')}
+                </td>
+                <td class="time">
+                    {booking.startAt ->
+                    f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
+                </td>
+                <td class="company">{booking.user.company}</td>
+                <td class="classification">{booking.classification.name}</td>
+                <td class="quantity">
+                    {booking.quantity}
+                    <f:translate key="tx_t3booking_domain_model_booking.unit"/>
+                </td>
+                <td class="icon">
+                    <f:link.action action="show" arguments="{booking : booking}">
+                        <f:image src="EXT:t3booking/Resources/Public/Icons/show.png"
+                                 alt="{f:translate(key: 'tx_t3booking.show')}"/>
+                    </f:link.action>
+                </td>
+            </tr>
+        </f:for>
+        </tbody>
+    </table>
 
-	<f:for each="{bookings}" as="booking">
-		<tr>
-			<td><f:link.action action="show" arguments="{booking : booking}"> {booking.startAt -> f:format.date()}</f:link.action></td>
-			<td><f:link.action action="show" arguments="{booking : booking}"> {booking.status}</f:link.action></td>
-			<td><f:link.action action="show" arguments="{booking : booking}"> {booking.endAt -> f:format.date()}</f:link.action></td>
-			<td><f:link.action action="show" arguments="{booking : booking}"> {booking.quantity}</f:link.action></td>
-			<td><f:link.action action="edit" arguments="{booking : booking}">Edit</f:link.action></td>
-			<td><f:link.action action="delete" arguments="{booking : booking}">Delete</f:link.action></td>
-		</tr>
-	</f:for>
-</table>
-
-<f:link.action action="new">New Booking</f:link.action>
 </f:section>
