Added - E-Mail notifications, default E-Mails - Configuration of E-Mails (sender, subject) - Validation

--- a/Resources/Private/Templates/Calendar/Bookings.html
+++ b/Resources/Private/Templates/Calendar/Bookings.html
@@ -22,10 +22,10 @@
                 minTime: "08:00",
                 maxTime: "23:00",
 
-                hiddenDays: [ 0, 6 ],
-
                 editable: false,
                 selectable: false,
+
+                hiddenDays: [ 0, 6 ],
 
                 eventLimit: true, // allow "more" link when too many events
                 eventSources: [
@@ -34,7 +34,7 @@
                         url: '/?type=5001',
                         // cache: true,
                         color: 'yellow',    // an option!
-                        borderColor: '#a0a0a0',
+                        borderColor: '#c0c0c0',
                         textColor: '#333'  // an option!
                     },
                     {
@@ -42,7 +42,6 @@
                         url: '/?type=5002',
                         // cache: true,
                         color: 'blue',    // an option!
-                        borderColor: 'white',
                         textColor: '#eee'  // an option!
                     }
                 ],
