--- a/Resources/Private/Templates/Email/Delete.html
+++ b/Resources/Private/Templates/Email/Delete.html
@@ -3,14 +3,12 @@
 <f:section name="main">
     <p>Hallo {booking.user.name},</p>
 
-    <p>Your booking is updated:</p>
-
+    <p>Your booking is deleted</p>
     <p>{booking.startAt ->
         f:format.date(format: 'd.m.Y')}
-    <br/>
+        <br/>
         {booking.startAt ->
         f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
     </p>
-
     <p>{booking.quantity} Persons</p>
 </f:section>
