- Layoutanpassungen - Classification entfernt - Validierung überarbeitet

--- a/Resources/Private/Partials/Booking/Properties.html
+++ b/Resources/Private/Partials/Booking/Properties.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
         <td colspan="2">
-            {booking.classification.name} | {booking.quantity}
+            {booking.classification} | {booking.quantity}
             <f:translate key="tx_t3booking_domain_model_booking.unit"/>
             |
             <f:format.date format="d.m.Y">{booking.startAt}</f:format.date>
