--- a/Resources/Private/Partials/Booking/PublicFields.html
+++ b/Resources/Private/Partials/Booking/PublicFields.html
@@ -11,8 +11,7 @@
 <label for="classification">
     <f:translate key="tx_t3booking_domain_model_booking.classification"/>
 </label><br/>
-<f:form.select property="classification"
-               options="{classifications}" optionLabelField="name" prependOptionLabel="Bitte wählen"/>
+<f:form.textfield property="classification"/>
 <br/>
 
 <label for="quantity">
