--- a/Resources/Private/Partials/Booking/PropertiesBooking.html
+++ b/Resources/Private/Partials/Booking/PropertiesBooking.html
@@ -2,7 +2,7 @@
 
 <table class="tx-t3booking-show">
     <tr>
-        <th>Bestätigt von:</th>
+        <th><f:translate key="tx_t3booking_domain_model_booking.confirm_by"/>:</th>
         <td>{booking.confirmBy.name} um
             <f:format.date format="H:i">{booking.confirmAt}</f:format.date>
             Uhr
