--- a/Resources/Private/Templates/Booking/Bookings.html
+++ b/Resources/Private/Templates/Booking/Bookings.html
@@ -5,6 +5,25 @@
 
     <f:flashMessages renderMode="div"/>
 
+    <div class="tx-t3booking-toolbar">
+        <f:link.action action="bookings" arguments="{scope:'today'}"
+                       class="{f:if(condition:'{buttonselected} == 1', then:'active')}">
+            <f:translate key="tx_t3booking.today"/>
+        </f:link.action>
+        <f:link.action action="bookings" arguments="{scope:'tomorrow'}"
+                       class="{f:if(condition:'{buttonselected} == 2', then:'active')}">
+            <f:translate key="tx_t3booking.tomorrow"/>
+        </f:link.action>
+        <f:link.action action="bookings" arguments="{scope:'week'}"
+                       class="{f:if(condition:'{buttonselected} == 3', then:'active')}">
+            <f:translate key="tx_t3booking.week"/>
+        </f:link.action>
+        <f:link.action action="bookings" arguments="{scope:'all'}"
+                       class="{f:if(condition:'{buttonselected} == 4', then:'active')}">
+            <f:translate key="tx_t3booking.all"/>
+        </f:link.action>
+    </div>
+
     <table class="tx-t3booking-list">
         <thead>
         <tr>
@@ -29,7 +48,7 @@
             <tr>
                 <td class="cal">
                     <f:link.action action="show" arguments="{booking : booking}" class="btn">
-                        <f:image src="EXT:t3booking/Resources/Public/Icons/cal.png" alt="Show"/>
+                        <f:image src="EXT:t3booking/Resources/Public/Icons/view.png" alt="{f:translate(key: 'tx_t3booking.show')}"/>
                     </f:link.action>
                 </td>
                 <td class="date">{booking.startAt ->
@@ -40,16 +59,10 @@
                     f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
                 </td>
                 <td class="company">{booking.user.company}</td>
-                <td class="classification">{booking.classification.name}</td>
+                <td class="classification">{booking.classification}</td>
                 <td class="quantity">
                     {booking.quantity}
                     <f:translate key="tx_t3booking_domain_model_booking.unit"/>
-                </td>
-                <td class="icon">
-                    <f:link.action action="show" arguments="{booking : booking}">
-                        <f:image src="EXT:t3booking/Resources/Public/Icons/show.png"
-                                 alt="{f:translate(key: 'tx_t3booking.show')}"/>
-                    </f:link.action>
                 </td>
             </tr>
         </f:for>
