--- a/Resources/Private/Templates/Booking/Edit.html
+++ b/Resources/Private/Templates/Booking/Edit.html
@@ -20,23 +20,27 @@
 
     <f:flashMessages renderMode="div"/>
 
-    <table class="tx-t3booking-show">
+    <table class="tx-t3booking-edit">
         <tr>
             <th scope="row">
                 <f:translate key="tx_t3booking_domain_model_user.company"/>:
             </th>
             <td class="company">
-                {booking.user.company} | {booking.classification.name}
+                {booking.user.company} | {booking.classification}
             </td>
         </tr>
         <tr>
-            <th>Gebucht von:</th>
+            <th>
+                <f:translate key="tx_t3booking_domain_model_booking.user"/>:
+            </th>
             <td>{booking.user.name} | {booking.user.telephone} |
                 <f:link.email email="{booking.user.email}">{booking.user.email}</f:link.email>
             </td>
         </tr>
         <tr>
-            <th>Gebucht am:</th>
+            <th>
+                <f:translate key="tx_t3booking_domain_model_booking.created_at"/>:
+            </th>
             <td>
                 <f:format.date format="d.m.Y">{booking.createdAt}</f:format.date>
                 um
@@ -44,10 +48,24 @@
                 Uhr
             </td>
         </tr>
-        <tr>
-            <th>Bestätigt von:</th>
-            <td>{booking.confirmBy.name} um <f:format.date format="H:i">{booking.confirmAt}</f:format.date> Uhr</td>
-        </tr>
+        <f:if condition="{booking.status == 0}">
+            <f:then>
+                <tr>
+                    <th><f:translate key="tx_t3booking_domain_model_booking.confirm_by"/>:</th>
+                    <td>{booking.confirmBy.name} um
+                        <f:format.date format="H:i">{booking.confirmAt}</f:format.date>
+                        Uhr
+                    </td>
+                </tr>
+            </f:then>
+            <f:else>
+                <tr>
+                    <td colspan="2" class="warning"><f:translate key="tx_t3booking_domain_model_booking.status.not_confirmed"/></td>
+                </tr>
+            </f:else>
+
+        </f:if>
+
     </table>
 
     <f:render partial="FormErrors" arguments="{object:Booking}"/>
