--- a/Resources/Private/Templates/Booking/Requests.html
+++ b/Resources/Private/Templates/Booking/Requests.html
@@ -40,7 +40,7 @@
                     f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
                 </td>
                 <td class="company">{booking.user.company}</td>
-                <td class="classification">{booking.classification.name}</td>
+                <td class="classification">{booking.classification}</td>
                 <td class="quantity">
                     {booking.quantity}
                     <f:translate key="tx_t3booking_domain_model_booking.unit"/>
