--- a/Resources/Public/Css/t3booking.css
+++ b/Resources/Public/Css/t3booking.css
@@ -22,17 +22,18 @@
   .tx-t3booking table th, .tx-t3booking table td {
     vertical-align: top; }
   .tx-t3booking table.tx-t3booking-list {
-    color: #5b90bf; }
+    color: #2a2a2a;
+    border-collapse: collapse; }
     .tx-t3booking table.tx-t3booking-list thead {
       display: none; }
     .tx-t3booking table.tx-t3booking-list td {
-      border-left: 1px solid #5b90bf;
-      padding: 0px 5px; }
-      .tx-t3booking table.tx-t3booking-list td.cal, .tx-t3booking table.tx-t3booking-list td.icon, .tx-t3booking table.tx-t3booking-list td.date {
+      border-left: 1px solid #cbcbcb;
+      padding: 0px 5px;
+      vertical-align: middle; }
+      .tx-t3booking table.tx-t3booking-list td.cal, .tx-t3booking table.tx-t3booking-list td.date, .tx-t3booking table.tx-t3booking-list td.icon {
         border: none; }
-      .tx-t3booking table.tx-t3booking-list td.icon {
-        width: 30px;
-        text-align: center; }
+      .tx-t3booking table.tx-t3booking-list td.cal {
+        padding: 0; }
   .tx-t3booking table.tx-t3booking-show {
     border-collapse: separate;
     border-spacing: 10px;
@@ -69,6 +70,20 @@
     .tx-t3booking table.tx-t3booking-edit th {
       width: 120px;
       text-align: left; }
+  .tx-t3booking .tx-t3booking-toolbar {
+    padding-bottom: 5px; }
+    .tx-t3booking .tx-t3booking-toolbar a {
+      display: inline-block;
+      width: 90px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      text-align: center;
+      color: white;
+      font-weight: bold;
+      background-color: #e1e1e1; }
+      .tx-t3booking .tx-t3booking-toolbar a.active, .tx-t3booking .tx-t3booking-toolbar a:hover {
+        color: black;
+        background-color: #f6f6f6; }
   .tx-t3booking table.tx-t3booking-buttons td {
     width: 100px;
     text-align: center; }
