--- a/Resources/Public/Css/t3booking.scss
+++ b/Resources/Public/Css/t3booking.scss
@@ -41,21 +41,22 @@ $tableBorder: $gray;
     }
   }
   table.tx-t3booking-list {
-    color: $blue;
+    color: #2a2a2a;
+    border-collapse: collapse;
     thead {
       display: none;
     }
     td {
-      border-left: 1px solid $blue;
+      border-left: 1px solid #cbcbcb;
       padding: 0px 5px;
+      vertical-align: middle;
       &.cal,
-      &.icon,
-      &.date {
+      &.date,
+      &.icon {
         border: none;
       }
-      &.icon {
-        width: 30px;
-        text-align: center;
+      &.cal {
+        padding: 0;
       }
     }
   }
@@ -106,6 +107,24 @@ $tableBorder: $gray;
       width: 120px;
       text-align: left;
     }
+  }
+  .tx-t3booking-toolbar {
+    a {
+      display: inline-block;
+      width: 90px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      text-align: center;
+      color: white;
+      font-weight: bold;
+      background-color: #e1e1e1;
+      &.active,
+      &:hover {
+        color: black;
+        background-color: #f6f6f6;
+      }
+    }
+    padding-bottom: 5px;
   }
   table.tx-t3booking-buttons {
     td {
