--- a/Resources/Private/Templates/Booking/Show.html
+++ b/Resources/Private/Templates/Booking/Show.html
@@ -12,14 +12,14 @@
         <tr>
             <td>
                 <f:link.action action="delete" arguments="{booking:booking}">
-                    <f:image src="EXT:t3booking/Resources/Public/Icons/delete.png"
-                             alt="{f:translate(key: 'tx_t3booking.delete')}"/>
+                    <f:image src="EXT:t3booking/Resources/Public/Icons/delete2.png"
+                             alt="{f:translate(key: 'tx_t3booking.delete')}" width="45" height="45"/>
                 </f:link.action>
             </td>
             <td>
                 <f:link.action action="edit" arguments="{booking:booking}">
-                    <f:image src="EXT:t3booking/Resources/Public/Icons/edit.png"
-                             alt="{f:translate(key: 'tx_t3booking.edit')}"/>
+                    <f:image src="EXT:t3booking/Resources/Public/Icons/edit2.png"
+                             alt="{f:translate(key: 'tx_t3booking.edit')}" width="45" height="45"/>
                 </f:link.action>
             </td>
         </tr>
