--- a/Resources/Private/Layouts/Email.html
+++ b/Resources/Private/Layouts/Email.html
@@ -1,5 +1,33 @@
-<f:render section="main" />
+<f:render section="main"/>
 <footer>
-    --
-    This Email was sent by T3booking.
+    <p>--</p>
+
+    <p>Bitte beachten Sie auch folgende wichtige Informationen:</p>
+
+    <p>https://downloads.lentpark.net/Information-Schulausfluege-Wandertage.pdf</p>
+
+    <p>https://downloads.lentpark.net/AGB-Koelnbaeder.pdf</p>
+
+    <p>--</p>
+
+    <p>Mit freundlichen Grüßen</p>
+
+    <p>Ihr Lentpark Team<br/>
+
+    <p>KölnBäder GmbH</p>
+
+    <p>Tel.: +49 (0)221-279180-13<br/>
+        Fax: +49 (0)221-279180-79</p>
+
+    <p>E-Mail: info@lentpark.net<br/>
+        Internet: www.lentpark.net</p>
+
+    <p>KölnBäder GmbH | Kämmergasse 1 | 50676 Köln</p>
+
+    <p>www.koelnbaeder.de | Info-Telefon: +49 (0)221-280 380</p>
+
+    <p>Handelsregister: Amtsgericht Köln, HRB 29 611<br/>
+        Geschäftsführung: Berthold Schmitt, Gerhard Reinke<br/>
+        Vorsitzender des Aufsichtsrates: Peter Kron</p>
+
 </footer>
