--- a/Resources/Private/Templates/Email/Create.html
+++ b/Resources/Private/Templates/Email/Create.html
@@ -1,15 +1,19 @@
 <f:layout name="Email"/>
 
 <f:section name="main">
-    <p>Hallo {booking.user.name},</p>
 
-    <p>We have received your booking request and will get in touch shortly.</p>
+    <p>Sehr geehrte(r) {booking.user.name},<br/>
+        Wir danken für Ihre Buchungsanfrage am Eislaufkalender des Lentparks Köln.</p>
 
-    <p>{booking.startAt ->
-        f:format.date(format: 'd.m.Y')}
-        <br/>
-        {booking.startAt ->
-        f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
-    </p>
-    <p>{booking.quantity} Persons</p>
+    <p>In Kürze werden wir Ihre Anfrage beantworten, bis dahin ist Ihre Buchung mit dem Status reserviert, in unserem
+        System hinterlegt.</p>
+
+    <p>Ihre Buchungsdetails</p>
+
+    <p>Datum: booking.startAt -> f:format.date(format: 'd.m.Y')}</br>
+        Uhrzeit: {booking.startAt ->
+        f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}<br/>
+        Personen: {booking.quantity}<br/>
+        Klasse: {booking.classification}</p>
+
 </f:section>
