--- a/Resources/Private/Templates/Email/Delete.html
+++ b/Resources/Private/Templates/Email/Delete.html
@@ -1,14 +1,13 @@
 <f:layout name="Email"/>
 
 <f:section name="main">
-    <p>Hallo {booking.user.name},</p>
+    <p>Sehr geehrte(r) {booking.user.name},</p>
 
-    <p>Your booking is deleted</p>
-    <p>{booking.startAt ->
-        f:format.date(format: 'd.m.Y')}
-        <br/>
-        {booking.startAt ->
-        f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
-    </p>
-    <p>{booking.quantity} Persons</p>
+    <p>Hiermit bestätigen wir die Stornierung Ihrer Buchung mit folgenden Buchungsdetails:</p>
+
+    <p>Datum: booking.startAt -> f:format.date(format: 'd.m.Y')}</br>
+        Uhrzeit: {booking.startAt ->
+        f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}<br/>
+        Personen: {booking.quantity}<br/>
+        Klasse: {booking.classification}</p>
 </f:section>
