--- a/Resources/Private/Templates/Email/Update.html
+++ b/Resources/Private/Templates/Email/Update.html
@@ -1,16 +1,14 @@
 <f:layout name="Email"/>
 
 <f:section name="main">
-    <p>Hallo {booking.user.name},</p>
+    <p>Sehr geehrte(r) {booking.user.name},</p>
 
-    <p>Your booking is updated:</p>
+    <p>Hiermit bestätigen wir die Änderung Ihrer Buchungsanfrage im Eislaufkalender des Lentparks Köln mit folgenden
+        neuen Buchungsdetails:</p>
 
-    <p>{booking.startAt ->
-        f:format.date(format: 'd.m.Y')}
-    <br/>
-        {booking.startAt ->
-        f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}
-    </p>
-
-    <p>{booking.quantity} Persons</p>
+    <p>Datum: booking.startAt -> f:format.date(format: 'd.m.Y')}</br>
+        Uhrzeit: {booking.startAt ->
+        f:format.date(format: 'H:i')} - {booking.endAt -> f:format.date(format: 'H:i')}<br/>
+        Personen: {booking.quantity}<br/>
+        Klasse: {booking.classification}</p>
 </f:section>
